src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

html, body, #root {
  margin: 0;
  padding: 0;
  min-height: 100%;
  background-color: #121212;
  width: 100%;
  
}



.slide-bg {
  background: linear-gradient(
    to right,
    rgb(131, 89, 228) 50%,   
    transparent 50% 
  );
  background-size: 200% 100%;
  background-position: right bottom; 
  border: 2px solid white;
  color: #0ea5e9;
  transition: background-position 0.3s ease, color 0.3s ease;
  background-repeat: no-repeat;
}

.slide-bg:hover {
  background-position: left bottom; 
  color: white !important;
}


.project-card {
  position: relative;
  border-radius: 0.5rem;
  background-color: transparent;
  border: 2px solid #6b21a8;
  overflow: hidden;
}

.project-card::before {
  content: '';
  position: absolute;
  inset: -2px;
  border-radius: 0.5rem;
  background: linear-gradient(135deg, #6b21a8, #0ea5e9);
  z-index: 0;
  transform: translate(-100%, 100%);
  transition: transform 0.8s ease-in-out;
  pointer-events: none;
}

.project-card:hover::before {
  transform: translate(0%, 0%);
}

.project-card::after {
  content: '';
  position: absolute;
  inset: 2px;
  border-radius: 0.5rem;
  background-color: #121212;
  z-index: 1;
}

.project-card-content {
  position: relative;
  z-index: 2;
}

/* Hide scrollbar */
.scrollbar-hide::-webkit-scrollbar {
  display: none;
}
.scrollbar-hide {
  -ms-overflow-style: none;
  scrollbar-width: none;
}

